# clean

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clean-data-quality-prd.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml
action/: action.yml  run_check.py
benchmarks/: README.md  run_benchmarks.py  strategy_benchmark.py
docs/: architecture.md  index.md
docs/adr/: ADR-0001-cleanlab-label-error-detection.md  ADR-0002-plugin-architecture.md  ADR-0003-pandas-data-interface.md  ADR-0004-facade-pattern-cleaner.md  ADR-0005-optional-dependencies.md  ADR-0006-dataclass-type-system.md  ADR-0007-async-streaming.md  ADR-0008-fastapi-rest-api.md  ADR-0009-fix-strategy-pattern.md  ADR-0010-lineage-tracking.md  ADR-0011-multi-backend-streaming.md  ADR-0012-github-actions-integration.md  README.md
docs/api/: active-learning.md  annotation.md  automl.md  ci-cd.md  cleaner.md  cli.md  cloud.md  collaboration.md  compliance.md  contamination.md  curriculum.md  dashboard.md  detection-strategies.md  detector-factory.md  detectors.md  distributed.md  drift.md  embedding-viz.md  exceptions.md  fixes.md  intelligent-sampling.md  labeler-scoring.md  llm-eval.md  loaders.md  marketplace.md  model-aware.md  multimodal.md  nl-query.md  plugins.md  privacy.md  processing.md  quality-augmentation.md  quality-predictor.md  quality-regression.md  realtime.md  reports.md  rest-api.md  root-cause.md  slice-discovery.md  streaming.md  (+4 more)
docs/getting-started/: examples.md  installation.md  quickstart.md
docs/guide/: bias.md  duplicates.md  imbalance.md  label-errors.md  llm-data.md  outliers.md  overview.md  reports.md  streaming.md  visualization.md
docs/guides/: next-gen-architecture.md  next-gen-features.md  nextgen-features.md  plugin-migration.md
docs/stylesheets/: extra.css
examples/: quickstart.ipynb
src/clean/: __init__.py  __version__.py  active_learning.py  advisor.py  agentic.py  annotation.py  api.py  augmentation.py  auto_detect.py  auto_docs.py  automl.py  benchmark.py  cli.py  cloud.py  collaboration.py  compliance.py  constants.py  contamination.py  copilot.py  cost_impact.py  curriculum.py  dashboard.py  distillation.py  distributed.py  drift.py  embedding_viz.py  exceptions.py  feature_store.py  federated.py  feedback_loop.py  fixes.py  fm_benchmark.py  integrations.py  knowledge_graph.py  labeler_scoring.py  lineage.py  llm.py  llm_eval.py  llm_judge.py  marketplace.py  (+23 more)
src/clean/automl/: __init__.py  optimizers.py  tuner.py
src/clean/core/: __init__.py  cleaner.py  report.py  types.py
src/clean/detection/: __init__.py  base.py  bias.py  duplicate_strategies.py  duplicates.py  factory.py  imbalance.py  label_errors.py  outliers.py  strategies.py
src/clean/embeddings/: __init__.py  base.py  foundation.py  image.py  text.py
src/clean/loaders/: __init__.py  base.py  csv_loader.py  huggingface_loader.py  image_loader.py  numpy_loader.py  pandas_loader.py
src/clean/processing/: __init__.py
src/clean/scoring/: __init__.py  metrics.py  quality_scorer.py
src/clean/utils/: __init__.py  export.py  preprocessing.py  validation.py
src/clean/visualization/: __init__.py  browser.py  interactive.py  plots.py
tests/: conftest.py  test_active_learning.py  test_advisor.py  test_annotation.py  test_auto_detect.py  test_auto_docs.py  test_automl.py  test_benchmark.py  test_cli.py  test_cloud.py  test_compliance.py  test_contamination.py  test_copilot.py  test_cost_impact.py  test_curriculum.py  test_dashboard.py  test_distributed.py  test_drift.py  test_embedding_viz.py  test_embeddings.py  test_exceptions.py  test_federated.py  test_feedback_loop.py  test_fixes.py  test_foundation_embeddings.py  test_labeler_scoring.py  test_lineage.py  test_llm.py  test_llm_eval.py  test_llm_judge.py  test_marketplace.py  test_mlops.py  test_model_aware.py  test_multimodal.py  test_new_modules.py  test_nl_query.py  test_plugins.py  test_privacy.py  test_processing.py  test_quality_augmentation.py  (+12 more)
tests/test_core/: test_cleaner.py  test_report.py
tests/test_detection/: __init__.py  test_duplicates.py  test_imbalance.py  test_label_errors.py  test_outliers.py
tests/test_integration/: test_full_pipeline.py  test_nextgen_workflows.py
tests/test_loaders/: __init__.py  test_huggingface_loader.py  test_pandas_loader.py
tests/test_scoring/: __init__.py  test_quality_scorer.py
tests/test_visualization/: __init__.py  test_browser.py  test_interactive.py  test_plots.py
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: architecture.md  changelog.md  comparison.md  contributing.md  faq.md  getting-started.md  intro.md
website/docs/api/: cleaner.md  detectors.md  fix-engine.md  lineage.md  llm.md  loaders.md  report.md  streaming.md
website/docs/concepts/: bias.md  duplicates.md  imbalance.md  label-errors.md  outliers.md  overview.md
website/docs/guides/: auto-fix.md  automl.md  cli.md  cloud.md  collaboration.md  intelligent-sampling.md  llm-data.md  model-aware.md  plugins.md  privacy.md  realtime.md  rest-api.md  root-cause.md  slice-discovery.md  streaming.md  vectordb.md
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
