[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clean-data-quality"
dynamic = ["version"]
description = "AI-powered data quality platform for ML datasets - detect label errors, duplicates, outliers, and biases"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Clean Team", email = "team@clean.dev" }
]
keywords = [
    "machine-learning",
    "data-quality",
    "label-errors",
    "data-cleaning",
    "ml-ops",
    "confident-learning",
    "outlier-detection",
    "duplicate-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "cleanlab>=2.0.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
text = [
    "sentence-transformers>=2.2.0",
]
image = [
    "Pillow>=9.0.0",
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    "transformers>=4.20.0",
]
huggingface = [
    "datasets>=2.0.0",
]
interactive = [
    "plotly>=5.0.0",
    "ipywidgets>=7.6.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]
all = [
    "clean-data-quality[text,image,huggingface,interactive,api,streaming,vectordb,cloud]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pandas-stubs>=1.5.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
streaming = [
    "aiokafka>=0.8.0",
    "pulsar-client>=3.0.0",
    "redis>=4.5.0",
]
vectordb = [
    "pinecone-client>=2.2.0",
    "weaviate-client>=3.15.0",
    "pymilvus>=2.2.0",
    "qdrant-client>=1.1.0",
]
cloud = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/clean-data/clean"
Documentation = "https://clean-data.github.io/clean"
Repository = "https://github.com/clean-data/clean"
Issues = "https://github.com/clean-data/clean/issues"

[project.scripts]
clean = "clean.cli:main"

[tool.hatch.version]
path = "src/clean/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clean"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=clean",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "PL",     # pylint
    "PERF",   # perflint
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict=
    "S101",   # assert usage (ok in tests)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLW2901", # redefined loop variable
    "RUF022", # __all__ sorting (prefer logical grouping)
    "N806",   # variable in function should be lowercase (X is standard for ML data)
    "E741",   # ambiguous variable name (l is fine in context)
    "PLR0911", # too many return statements
    "PLC0415", # import at top of file (conditional imports are fine)
    "S324",   # insecure hash (md5 is for non-security hashing)
    "SIM102", # nested ifs can be clearer than combined
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002", "ARG005", "PLR2004", "RUF059", "PTH", "F841", "PERF401"]  # Tests may have unused fixtures
"examples/**/*.py" = ["T20"]
"src/clean/__init__.py" = ["F401", "E402"]  # Re-exports for public API, imports after try blocks
"src/clean/core/cleaner.py" = ["PLR0912"]  # Complex branching in analysis methods
"src/clean/detection/*.py" = ["ARG002", "PLR0912", "PLR0915"]  # Complex detection logic
"src/clean/embeddings/__init__.py" = ["F401"]  # Re-exports for public API
"src/clean/loaders/*.py" = ["PTH", "RUF015"]  # Using os.path is fine in loaders
"src/clean/visualization/__init__.py" = ["F401"]  # Re-exports for public API
"src/clean/visualization/*.py" = ["ARG001", "ARG002", "ARG005", "B007", "PTH", "C408"]  # Widget callbacks have unused args, plots use os
"src/clean/utils/*.py" = ["PTH", "PERF401", "C416"]  # Utils can use os module
"src/clean/scoring/*.py" = ["ARG001"]  # Some args reserved for future use
"src/clean/api.py" = ["B008", "B904", "PLW0603", "PERF401", "S104"]  # FastAPI patterns
"src/clean/cli.py" = ["T20", "S104"]  # CLI uses print statements, 0.0.0.0 is intended
"src/clean/streaming.py" = ["PERF401", "SIM113"]  # Async iteration patterns
"src/clean/llm.py" = ["ARG002"]  # Reserved args for future use
"src/clean/fixes.py" = ["PERF203", "PERF401", "PLR0912", "PLR0915"]  # Complex fix logic

[tool.ruff.lint.isort]
known-first-party = ["clean"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/clean"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
